recursion.logo.lessons.recursion.logo.koch.Koch.scala.error
Koch:12: error: not found: value lenght
  levels match { case 0 => avance(lenght)
                                  ^